Bug 1658198 - Provide a minimum starting value for extraBlockSize in FindBestBalanceBSize. r=heycam

Differential Revision: https://phabricator.services.mozilla.com/D87131